// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Command Pallet: keyboard shortcut tests when on linux renders 1`] = `
<body>
  <div>
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <div
              class="winMenu"
            >
              <div
                data-testid="window-menu"
              >
                <svg
                  height="12"
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                  width="12"
                >
                  <path
                    d="M0,8.5h12v1H0V8.5z"
                    fill="currentColor"
                  />
                  <path
                    d="M0,5.5h12v1H0V5.5z"
                    fill="currentColor"
                  />
                  <path
                    d="M0,2.5h12v1H0V2.5z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="home-button"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
          <div
            class="preventedDragging"
          >
            <div
              class="windowButtons linuxButtons"
            >
              <div
                class="minimize"
                data-testid="window-minimize"
              >
                <svg
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                >
                  <rect
                    fill="currentColor"
                    height="1"
                    width="10"
                    x="1"
                    y="9"
                  />
                </svg>
              </div>
              <div
                class="maximize"
                data-testid="window-maximize"
              >
                <svg
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                >
                  <rect
                    fill="none"
                    height="9"
                    stroke="currentColor"
                    width="9"
                    x="1.5"
                    y="1.5"
                  />
                </svg>
              </div>
              <div
                class="close"
                data-testid="window-close"
              >
                <svg
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                >
                  <polygon
                    fill="currentColor"
                    points="11 1.576 6.583 6 11 10.424 10.424 11 6 6.583 1.576 11 1 10.424 5.417 6 1 1.576 1.576 1 6 5.417 10.424 1"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="flex justify-center Welcome align-center"
          data-testid="welcome-page"
        >
          <div
            data-testid="welcome-banner-container"
            style="width: 320px;"
          >
            <i
              class="Icon logo svg focusable"
            >
              <span
                class="icon"
              />
            </i>
            <div
              class="flex justify-center"
            >
              <div
                data-testid="welcome-text-container"
                style="width: 320px;"
              >
                <h2>
                  Welcome to some-product-name!
                </h2>
                <p>
                  To get you started we have auto-detected your clusters in your
                   
                  kubeconfig file and added them to the catalog, your centralized
                   
                  view for managing all your cloud-native resources.
                  <br />
                  <br />
                  If you have any questions or feedback, please join our 
                  <a
                    class="link"
                    href="https://forums.k8slens.dev"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Lens Forums
                  </a>
                  .
                </p>
                <ul
                  class="block"
                  data-testid="welcome-menu-container"
                  style="width: 320px;"
                >
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="view_list"
                      >
                        view_list
                      </span>
                    </i>
                    <a
                      class="box col-10"
                    >
                      Browse Clusters in Catalog
                    </a>
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex column"
      >
        <div
          class="HotbarItems flex column gaps"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              style="z-index: 12; position: absolute;"
            >
              <div
                class="HotbarIcon"
              >
                <div
                  class="Avatar rounded avatar"
                  data-testid="hotbar-icon-for-catalog-entity"
                  id="hotbar-icon-for-catalog-entity"
                  style="width: 40px; height: 40px; background-color: rgb(61, 144, 206);"
                >
                  <i
                    class="Icon material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="view_list"
                    >
                      view_list
                    </span>
                  </i>
                </div>
                <i
                  class="Icon badge material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="settings"
                  >
                    settings
                  </span>
                </i>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="1"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="2"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="3"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="4"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="5"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="6"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="7"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="8"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="9"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="10"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="11"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon Icon previous material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`Command Pallet: keyboard shortcut tests when on linux when pressing ESC renders 1`] = `
<body>
  <div>
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <div
              class="winMenu"
            >
              <div
                data-testid="window-menu"
              >
                <svg
                  height="12"
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                  width="12"
                >
                  <path
                    d="M0,8.5h12v1H0V8.5z"
                    fill="currentColor"
                  />
                  <path
                    d="M0,5.5h12v1H0V5.5z"
                    fill="currentColor"
                  />
                  <path
                    d="M0,2.5h12v1H0V2.5z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="home-button"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
          <div
            class="preventedDragging"
          >
            <div
              class="windowButtons linuxButtons"
            >
              <div
                class="minimize"
                data-testid="window-minimize"
              >
                <svg
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                >
                  <rect
                    fill="currentColor"
                    height="1"
                    width="10"
                    x="1"
                    y="9"
                  />
                </svg>
              </div>
              <div
                class="maximize"
                data-testid="window-maximize"
              >
                <svg
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                >
                  <rect
                    fill="none"
                    height="9"
                    stroke="currentColor"
                    width="9"
                    x="1.5"
                    y="1.5"
                  />
                </svg>
              </div>
              <div
                class="close"
                data-testid="window-close"
              >
                <svg
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                >
                  <polygon
                    fill="currentColor"
                    points="11 1.576 6.583 6 11 10.424 10.424 11 6 6.583 1.576 11 1 10.424 5.417 6 1 1.576 1.576 1 6 5.417 10.424 1"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="flex justify-center Welcome align-center"
          data-testid="welcome-page"
        >
          <div
            data-testid="welcome-banner-container"
            style="width: 320px;"
          >
            <i
              class="Icon logo svg focusable"
            >
              <span
                class="icon"
              />
            </i>
            <div
              class="flex justify-center"
            >
              <div
                data-testid="welcome-text-container"
                style="width: 320px;"
              >
                <h2>
                  Welcome to some-product-name!
                </h2>
                <p>
                  To get you started we have auto-detected your clusters in your
                   
                  kubeconfig file and added them to the catalog, your centralized
                   
                  view for managing all your cloud-native resources.
                  <br />
                  <br />
                  If you have any questions or feedback, please join our 
                  <a
                    class="link"
                    href="https://forums.k8slens.dev"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Lens Forums
                  </a>
                  .
                </p>
                <ul
                  class="block"
                  data-testid="welcome-menu-container"
                  style="width: 320px;"
                >
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="view_list"
                      >
                        view_list
                      </span>
                    </i>
                    <a
                      class="box col-10"
                    >
                      Browse Clusters in Catalog
                    </a>
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex column"
      >
        <div
          class="HotbarItems flex column gaps"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              style="z-index: 12; position: absolute;"
            >
              <div
                class="HotbarIcon"
              >
                <div
                  class="Avatar rounded avatar"
                  data-testid="hotbar-icon-for-catalog-entity"
                  id="hotbar-icon-for-catalog-entity"
                  style="width: 40px; height: 40px; background-color: rgb(61, 144, 206);"
                >
                  <i
                    class="Icon material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="view_list"
                    >
                      view_list
                    </span>
                  </i>
                </div>
                <i
                  class="Icon badge material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="settings"
                  >
                    settings
                  </span>
                </i>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="1"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="2"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="3"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="4"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="5"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="6"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="7"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="8"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="9"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="10"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="11"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon Icon previous material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`Command Pallet: keyboard shortcut tests when on linux when pressing SHIFT+CTRL+P renders 1`] = `
<body>
  <div>
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <div
              class="winMenu"
            >
              <div
                data-testid="window-menu"
              >
                <svg
                  height="12"
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                  width="12"
                >
                  <path
                    d="M0,8.5h12v1H0V8.5z"
                    fill="currentColor"
                  />
                  <path
                    d="M0,5.5h12v1H0V5.5z"
                    fill="currentColor"
                  />
                  <path
                    d="M0,2.5h12v1H0V2.5z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="home-button"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
          <div
            class="preventedDragging"
          >
            <div
              class="windowButtons linuxButtons"
            >
              <div
                class="minimize"
                data-testid="window-minimize"
              >
                <svg
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                >
                  <rect
                    fill="currentColor"
                    height="1"
                    width="10"
                    x="1"
                    y="9"
                  />
                </svg>
              </div>
              <div
                class="maximize"
                data-testid="window-maximize"
              >
                <svg
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                >
                  <rect
                    fill="none"
                    height="9"
                    stroke="currentColor"
                    width="9"
                    x="1.5"
                    y="1.5"
                  />
                </svg>
              </div>
              <div
                class="close"
                data-testid="window-close"
              >
                <svg
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                >
                  <polygon
                    fill="currentColor"
                    points="11 1.576 6.583 6 11 10.424 10.424 11 6 6.583 1.576 11 1 10.424 5.417 6 1 1.576 1.576 1 6 5.417 10.424 1"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="flex justify-center Welcome align-center"
          data-testid="welcome-page"
        >
          <div
            data-testid="welcome-banner-container"
            style="width: 320px;"
          >
            <i
              class="Icon logo svg focusable"
            >
              <span
                class="icon"
              />
            </i>
            <div
              class="flex justify-center"
            >
              <div
                data-testid="welcome-text-container"
                style="width: 320px;"
              >
                <h2>
                  Welcome to some-product-name!
                </h2>
                <p>
                  To get you started we have auto-detected your clusters in your
                   
                  kubeconfig file and added them to the catalog, your centralized
                   
                  view for managing all your cloud-native resources.
                  <br />
                  <br />
                  If you have any questions or feedback, please join our 
                  <a
                    class="link"
                    href="https://forums.k8slens.dev"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Lens Forums
                  </a>
                  .
                </p>
                <ul
                  class="block"
                  data-testid="welcome-menu-container"
                  style="width: 320px;"
                >
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="view_list"
                      >
                        view_list
                      </span>
                    </i>
                    <a
                      class="box col-10"
                    >
                      Browse Clusters in Catalog
                    </a>
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex column"
      >
        <div
          class="HotbarItems flex column gaps"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              style="z-index: 12; position: absolute;"
            >
              <div
                class="HotbarIcon"
              >
                <div
                  class="Avatar rounded avatar"
                  data-testid="hotbar-icon-for-catalog-entity"
                  id="hotbar-icon-for-catalog-entity"
                  style="width: 40px; height: 40px; background-color: rgb(61, 144, 206);"
                >
                  <i
                    class="Icon material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="view_list"
                    >
                      view_list
                    </span>
                  </i>
                </div>
                <i
                  class="Icon badge material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="settings"
                  >
                    settings
                  </span>
                </i>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="1"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="2"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="3"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="4"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="5"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="6"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="7"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="8"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="9"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="10"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="11"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon Icon previous material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
  <div
    class="Dialog flex center"
  >
    <div
      class="box"
    >
      <div
        class="CommandContainer"
        data-testid="command-container"
      >
        <div
          class="Select theme-dark css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-command-palette-search-input-live-region"
          >
            <span
              id="aria-selection"
            >
              option , selected.
            </span>
            <span
              id="aria-context"
            >
               7 results available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
            </span>
          </span>
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class="Select__control Select__control--is-focused Select__control--menu-is-open css-t3ipsp-control"
          >
            <div
              class="Select__value-container css-1fdsijx-ValueContainer"
            >
              <div
                class="Select__placeholder css-1jqq78o-placeholder"
                id="react-select-command-palette-search-input-placeholder"
              >
                Type a command or search…
              </div>
              <div
                class="Select__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="react-select-command-palette-search-input-listbox"
                  aria-describedby="react-select-command-palette-search-input-placeholder"
                  aria-expanded="true"
                  aria-haspopup="true"
                  aria-owns="react-select-command-palette-search-input-listbox"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class="Select__input"
                  id="command-palette-search-input"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="Select__indicators css-1hb7zxy-IndicatorsContainer"
            />
          </div>
          <div
            class="theme-dark command-palette-search-input-options Select__menu css-1nmdiq5-menu"
            id="react-select-command-palette-search-input-listbox"
          >
            <div
              class="Select__menu-list css-1n6sfyn-MenuList"
            >
              <div
                aria-disabled="false"
                class="Select__option css-10wo9uf-option"
                id="react-select-command-palette-search-input-option-0"
                tabindex="-1"
              >
                Preferences: Open
              </div>
              <div
                aria-disabled="false"
                class="Select__option css-10wo9uf-option"
                id="react-select-command-palette-search-input-option-1"
                tabindex="-1"
              >
                General/Welcome Page: View Settings
              </div>
              <div
                aria-disabled="false"
                class="Select__option css-10wo9uf-option"
                id="react-select-command-palette-search-input-option-2"
                tabindex="-1"
              >
                Hotbar: Switch ...
              </div>
              <div
                aria-disabled="false"
                class="Select__option css-10wo9uf-option"
                id="react-select-command-palette-search-input-option-3"
                tabindex="-1"
              >
                Hotbar: Add Hotbar ...
              </div>
              <div
                aria-disabled="false"
                class="Select__option css-10wo9uf-option"
                id="react-select-command-palette-search-input-option-4"
                tabindex="-1"
              >
                Hotbar: Remove Hotbar ...
              </div>
              <div
                aria-disabled="false"
                class="Select__option css-10wo9uf-option"
                id="react-select-command-palette-search-input-option-5"
                tabindex="-1"
              >
                Hotbar: Rename Hotbar ...
              </div>
              <div
                aria-disabled="false"
                class="Select__option css-10wo9uf-option"
                id="react-select-command-palette-search-input-option-6"
                tabindex="-1"
              >
                Catalog: Activate Entity ...
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Command Pallet: keyboard shortcut tests when on linux when pressing SHIFT+CTRL+P when pressing ESC renders 1`] = `
<body>
  <div>
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <div
              class="winMenu"
            >
              <div
                data-testid="window-menu"
              >
                <svg
                  height="12"
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                  width="12"
                >
                  <path
                    d="M0,8.5h12v1H0V8.5z"
                    fill="currentColor"
                  />
                  <path
                    d="M0,5.5h12v1H0V5.5z"
                    fill="currentColor"
                  />
                  <path
                    d="M0,2.5h12v1H0V2.5z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="home-button"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
          <div
            class="preventedDragging"
          >
            <div
              class="windowButtons linuxButtons"
            >
              <div
                class="minimize"
                data-testid="window-minimize"
              >
                <svg
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                >
                  <rect
                    fill="currentColor"
                    height="1"
                    width="10"
                    x="1"
                    y="9"
                  />
                </svg>
              </div>
              <div
                class="maximize"
                data-testid="window-maximize"
              >
                <svg
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                >
                  <rect
                    fill="none"
                    height="9"
                    stroke="currentColor"
                    width="9"
                    x="1.5"
                    y="1.5"
                  />
                </svg>
              </div>
              <div
                class="close"
                data-testid="window-close"
              >
                <svg
                  shape-rendering="crispEdges"
                  viewBox="0 0 12 12"
                >
                  <polygon
                    fill="currentColor"
                    points="11 1.576 6.583 6 11 10.424 10.424 11 6 6.583 1.576 11 1 10.424 5.417 6 1 1.576 1.576 1 6 5.417 10.424 1"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="flex justify-center Welcome align-center"
          data-testid="welcome-page"
        >
          <div
            data-testid="welcome-banner-container"
            style="width: 320px;"
          >
            <i
              class="Icon logo svg focusable"
            >
              <span
                class="icon"
              />
            </i>
            <div
              class="flex justify-center"
            >
              <div
                data-testid="welcome-text-container"
                style="width: 320px;"
              >
                <h2>
                  Welcome to some-product-name!
                </h2>
                <p>
                  To get you started we have auto-detected your clusters in your
                   
                  kubeconfig file and added them to the catalog, your centralized
                   
                  view for managing all your cloud-native resources.
                  <br />
                  <br />
                  If you have any questions or feedback, please join our 
                  <a
                    class="link"
                    href="https://forums.k8slens.dev"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Lens Forums
                  </a>
                  .
                </p>
                <ul
                  class="block"
                  data-testid="welcome-menu-container"
                  style="width: 320px;"
                >
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="view_list"
                      >
                        view_list
                      </span>
                    </i>
                    <a
                      class="box col-10"
                    >
                      Browse Clusters in Catalog
                    </a>
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex column"
      >
        <div
          class="HotbarItems flex column gaps"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              style="z-index: 12; position: absolute;"
            >
              <div
                class="HotbarIcon"
              >
                <div
                  class="Avatar rounded avatar"
                  data-testid="hotbar-icon-for-catalog-entity"
                  id="hotbar-icon-for-catalog-entity"
                  style="width: 40px; height: 40px; background-color: rgb(61, 144, 206);"
                >
                  <i
                    class="Icon material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="view_list"
                    >
                      view_list
                    </span>
                  </i>
                </div>
                <i
                  class="Icon badge material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="settings"
                  >
                    settings
                  </span>
                </i>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="1"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="2"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="3"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="4"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="5"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="6"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="7"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="8"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="9"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="10"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="11"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon Icon previous material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`Command Pallet: keyboard shortcut tests when on macOS renders 1`] = `
<body>
  <div>
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="home-button"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="flex justify-center Welcome align-center"
          data-testid="welcome-page"
        >
          <div
            data-testid="welcome-banner-container"
            style="width: 320px;"
          >
            <i
              class="Icon logo svg focusable"
            >
              <span
                class="icon"
              />
            </i>
            <div
              class="flex justify-center"
            >
              <div
                data-testid="welcome-text-container"
                style="width: 320px;"
              >
                <h2>
                  Welcome to some-product-name!
                </h2>
                <p>
                  To get you started we have auto-detected your clusters in your
                   
                  kubeconfig file and added them to the catalog, your centralized
                   
                  view for managing all your cloud-native resources.
                  <br />
                  <br />
                  If you have any questions or feedback, please join our 
                  <a
                    class="link"
                    href="https://forums.k8slens.dev"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Lens Forums
                  </a>
                  .
                </p>
                <ul
                  class="block"
                  data-testid="welcome-menu-container"
                  style="width: 320px;"
                >
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="view_list"
                      >
                        view_list
                      </span>
                    </i>
                    <a
                      class="box col-10"
                    >
                      Browse Clusters in Catalog
                    </a>
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex column"
      >
        <div
          class="HotbarItems flex column gaps"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              style="z-index: 12; position: absolute;"
            >
              <div
                class="HotbarIcon"
              >
                <div
                  class="Avatar rounded avatar"
                  data-testid="hotbar-icon-for-catalog-entity"
                  id="hotbar-icon-for-catalog-entity"
                  style="width: 40px; height: 40px; background-color: rgb(61, 144, 206);"
                >
                  <i
                    class="Icon material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="view_list"
                    >
                      view_list
                    </span>
                  </i>
                </div>
                <i
                  class="Icon badge material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="settings"
                  >
                    settings
                  </span>
                </i>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="1"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="2"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="3"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="4"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="5"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="6"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="7"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="8"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="9"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="10"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="11"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon Icon previous material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`Command Pallet: keyboard shortcut tests when on macOS when pressing ESC renders 1`] = `
<body>
  <div>
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="home-button"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="flex justify-center Welcome align-center"
          data-testid="welcome-page"
        >
          <div
            data-testid="welcome-banner-container"
            style="width: 320px;"
          >
            <i
              class="Icon logo svg focusable"
            >
              <span
                class="icon"
              />
            </i>
            <div
              class="flex justify-center"
            >
              <div
                data-testid="welcome-text-container"
                style="width: 320px;"
              >
                <h2>
                  Welcome to some-product-name!
                </h2>
                <p>
                  To get you started we have auto-detected your clusters in your
                   
                  kubeconfig file and added them to the catalog, your centralized
                   
                  view for managing all your cloud-native resources.
                  <br />
                  <br />
                  If you have any questions or feedback, please join our 
                  <a
                    class="link"
                    href="https://forums.k8slens.dev"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Lens Forums
                  </a>
                  .
                </p>
                <ul
                  class="block"
                  data-testid="welcome-menu-container"
                  style="width: 320px;"
                >
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="view_list"
                      >
                        view_list
                      </span>
                    </i>
                    <a
                      class="box col-10"
                    >
                      Browse Clusters in Catalog
                    </a>
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex column"
      >
        <div
          class="HotbarItems flex column gaps"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              style="z-index: 12; position: absolute;"
            >
              <div
                class="HotbarIcon"
              >
                <div
                  class="Avatar rounded avatar"
                  data-testid="hotbar-icon-for-catalog-entity"
                  id="hotbar-icon-for-catalog-entity"
                  style="width: 40px; height: 40px; background-color: rgb(61, 144, 206);"
                >
                  <i
                    class="Icon material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="view_list"
                    >
                      view_list
                    </span>
                  </i>
                </div>
                <i
                  class="Icon badge material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="settings"
                  >
                    settings
                  </span>
                </i>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="1"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="2"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="3"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="4"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="5"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="6"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="7"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="8"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="9"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="10"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="11"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon Icon previous material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`Command Pallet: keyboard shortcut tests when on macOS when pressing SHIFT+CMD+P renders 1`] = `
<body>
  <div>
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="home-button"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="flex justify-center Welcome align-center"
          data-testid="welcome-page"
        >
          <div
            data-testid="welcome-banner-container"
            style="width: 320px;"
          >
            <i
              class="Icon logo svg focusable"
            >
              <span
                class="icon"
              />
            </i>
            <div
              class="flex justify-center"
            >
              <div
                data-testid="welcome-text-container"
                style="width: 320px;"
              >
                <h2>
                  Welcome to some-product-name!
                </h2>
                <p>
                  To get you started we have auto-detected your clusters in your
                   
                  kubeconfig file and added them to the catalog, your centralized
                   
                  view for managing all your cloud-native resources.
                  <br />
                  <br />
                  If you have any questions or feedback, please join our 
                  <a
                    class="link"
                    href="https://forums.k8slens.dev"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Lens Forums
                  </a>
                  .
                </p>
                <ul
                  class="block"
                  data-testid="welcome-menu-container"
                  style="width: 320px;"
                >
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="view_list"
                      >
                        view_list
                      </span>
                    </i>
                    <a
                      class="box col-10"
                    >
                      Browse Clusters in Catalog
                    </a>
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex column"
      >
        <div
          class="HotbarItems flex column gaps"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              style="z-index: 12; position: absolute;"
            >
              <div
                class="HotbarIcon"
              >
                <div
                  class="Avatar rounded avatar"
                  data-testid="hotbar-icon-for-catalog-entity"
                  id="hotbar-icon-for-catalog-entity"
                  style="width: 40px; height: 40px; background-color: rgb(61, 144, 206);"
                >
                  <i
                    class="Icon material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="view_list"
                    >
                      view_list
                    </span>
                  </i>
                </div>
                <i
                  class="Icon badge material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="settings"
                  >
                    settings
                  </span>
                </i>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="1"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="2"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="3"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="4"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="5"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="6"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="7"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="8"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="9"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="10"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="11"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon Icon previous material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
  <div
    class="Dialog flex center"
  >
    <div
      class="box"
    >
      <div
        class="CommandContainer"
        data-testid="command-container"
      >
        <div
          class="Select theme-dark css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-command-palette-search-input-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          >
            <span
              id="aria-selection"
            />
            <span
              id="aria-context"
            >
              option Preferences: Open focused, 1 of 2. 2 results available for search term P. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
            </span>
          </span>
          <div
            class="Select__control Select__control--is-focused Select__control--menu-is-open css-t3ipsp-control"
          >
            <div
              class="Select__value-container css-1fdsijx-ValueContainer"
            >
              <div
                class="Select__input-container css-166bipr-Input"
                data-value="P"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="react-select-command-palette-search-input-listbox"
                  aria-describedby="react-select-command-palette-search-input-placeholder"
                  aria-expanded="true"
                  aria-haspopup="true"
                  aria-owns="react-select-command-palette-search-input-listbox"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class="Select__input"
                  id="command-palette-search-input"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value="P"
                />
              </div>
            </div>
            <div
              class="Select__indicators css-1hb7zxy-IndicatorsContainer"
            />
          </div>
          <div
            class="theme-dark command-palette-search-input-options Select__menu css-1nmdiq5-menu"
            id="react-select-command-palette-search-input-listbox"
          >
            <div
              class="Select__menu-list css-1n6sfyn-MenuList"
            >
              <div
                aria-disabled="false"
                class="Select__option Select__option--is-focused css-d7l1ni-option"
                id="react-select-command-palette-search-input-option-0"
                tabindex="-1"
              >
                Preferences: Open
              </div>
              <div
                aria-disabled="false"
                class="Select__option css-10wo9uf-option"
                id="react-select-command-palette-search-input-option-1"
                tabindex="-1"
              >
                General/Welcome Page: View Settings
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Command Pallet: keyboard shortcut tests when on macOS when pressing SHIFT+CMD+P when pressing ESC renders 1`] = `
<body>
  <div>
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="home-button"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="flex justify-center Welcome align-center"
          data-testid="welcome-page"
        >
          <div
            data-testid="welcome-banner-container"
            style="width: 320px;"
          >
            <i
              class="Icon logo svg focusable"
            >
              <span
                class="icon"
              />
            </i>
            <div
              class="flex justify-center"
            >
              <div
                data-testid="welcome-text-container"
                style="width: 320px;"
              >
                <h2>
                  Welcome to some-product-name!
                </h2>
                <p>
                  To get you started we have auto-detected your clusters in your
                   
                  kubeconfig file and added them to the catalog, your centralized
                   
                  view for managing all your cloud-native resources.
                  <br />
                  <br />
                  If you have any questions or feedback, please join our 
                  <a
                    class="link"
                    href="https://forums.k8slens.dev"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Lens Forums
                  </a>
                  .
                </p>
                <ul
                  class="block"
                  data-testid="welcome-menu-container"
                  style="width: 320px;"
                >
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="view_list"
                      >
                        view_list
                      </span>
                    </i>
                    <a
                      class="box col-10"
                    >
                      Browse Clusters in Catalog
                    </a>
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex column"
      >
        <div
          class="HotbarItems flex column gaps"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              style="z-index: 12; position: absolute;"
            >
              <div
                class="HotbarIcon"
              >
                <div
                  class="Avatar rounded avatar"
                  data-testid="hotbar-icon-for-catalog-entity"
                  id="hotbar-icon-for-catalog-entity"
                  style="width: 40px; height: 40px; background-color: rgb(61, 144, 206);"
                >
                  <i
                    class="Icon material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="view_list"
                    >
                      view_list
                    </span>
                  </i>
                </div>
                <i
                  class="Icon badge material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="settings"
                  >
                    settings
                  </span>
                </i>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="1"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="2"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="3"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="4"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="5"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="6"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="7"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="8"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="9"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="10"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="11"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon Icon previous material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;
